<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
	
	<!--  pie chart (layout populated in PartitionArrayAdapter)  -->
	<!--  TODO different sizes for dpis -->
	<LinearLayout
		android:id="@+id/row_piechart"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		/>
	
	<!--  stats section (2 rows, right panel)  -->
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="match_parent"
		android:weightSum="5"
		android:orientation="vertical"
		>
		
	    <!--  Title row  -->
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        >
	        
		    <!--  Title  -->
			<TextView
				android:id="@+id/row_title"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:textSize="20sp"
				android:text="@string/row_title"
				/>
			<!--  total partition space  -->
			<TextView 
			    android:id="@+id/row_total_space"
			    android:layout_width="wrap_content"
			    android:layout_height="match_parent"
			    android:text="@string/row_space_total"
			    />
		
		</LinearLayout>
		
	
		<!--  space text  -->
		<LinearLayout
			android:layout_height="fill_parent"
			android:layout_width="match_parent"
			android:orientation="horizontal"
			>
			
		    <!--  label (free:)  -->
		    <TextView 
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:text="@string/row_free_label"
		        android:textSize="18sp"
		        />
		    
			<TextView
				android:id="@+id/row_freePercent"
				android:layout_height="wrap_content"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:gravity="center_horizontal"
				android:text="@string/row_space_free_percentage"
				android:textSize="18sp"
				/>
			<TextView
				android:id="@+id/row_freeGigs"
				android:layout_height="wrap_content"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:gravity="center_horizontal"
				android:text="@string/row_space_free_gb"
				android:textSize="18sp"
				/>
			
		</LinearLayout>
		
	</LinearLayout>

</LinearLayout>
